[package]
name = "random_seed"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../libs/basic" }
nix = "0.24"
libc = "0.2.*"
log = { version = "=0.4.14", default_features = false, features = ["std"] }
xattr = "0.2.3"
