[package]
name = "random_seed"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../libs/basic" }

libc = { version = "0.2.*", default-features = false }
log = { version = "=0.4.14", default_features = false }
nix = { version = "0.24", default-features = false }
xattr = { version = "0.2.3", default-features = false }
