[package]
name = "random_seed"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../libs/basic", default-features = false, features = [
    "config",
    "io",
] }

libc = { version = "0.2.*", default-features = false }
log = { path = "../../libs/log" }
nix = { version = "0.24", default-features = false, features = ["ioctl"] }
xattr = { version = "0.2.3", default-features = false }
