[package]
name = "switch_root"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../libs/basic", features = ["mount", "machine"] }

log = { version = "=0.4.14", default_features = false }
nix = { version = "0.24", default-features = false, features = ["mount"] }
