[package]
name = "sysmonitor"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../libs/basic" }
procfs = "0.12.0"
serde = "1.0.130"
serde_derive = "1.0.130"
toml = "0.5.8"
nix = "0.24"
