[package]
name = "basic"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../constants" }
log = { path = "../log" }

bitflags = { version = "1.3.2", optional = true }
pkg-config = { version = "0.3", optional = true }
libc = { version = "0.2.140", default-features = false }
nix = { version = "0.24", default-features = false, features = [
    "poll",
    "dir",
    # "signal",
    # "ioctl",
    # "user",
    # "net",
    "resource",
] }
pathdiff = { version = "0.2.1", optional = true }
procfs = { version = "0.12.0", default-features = false, optional = true }
rand = { version = "0.8.5", optional = true }
snafu = { version = "0.7", features = ["std"], default-features = false }

[dev-dependencies]
tempfile = "3.6.0"

[features]
full = [
    "condition",
    "selinux",
    "sysfs",
    "unistd",
    "uuid",
    "machine",
    "config",
    "cargo",
    "parse",
    "capability",
    "network",
    "rlimit",
    "cpu",
    "disk",
    "memory",
    "sensors",
    "host",
    "process",
    "fs",
    "cmdline",
    "security",
    "string",
    "stat",
    "fd",
    "mount",
    "naming_scheme",
    "signal",
    "socket",
    "os_release",
    "show_table",
    "io",
]

capability = []
cargo = ["pkg-config"]
cmdline = []
condition = ["sysfs", "unistd"]
config = []
cpu = []
disk = []
fd = []
file = []
fs = ["pathdiff", "rand"]
host = []
io = []
machine = []
memory = []
mount = []
naming_scheme = ["bitflags"]
network = []
os_release = []
parse = []
process = ["procfs"]
rlimit = []
security = []
selinux = []
sensors = []
show_table = []
signal = []
socket = []
stat = []
string = []
sysfs = []
unistd = []
uuid = ["bitflags"]
