[package]
name = "blkid_rs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.bindgen]
default_features = false
features = ["runtime"]
version = "0.63.0"

[build-dependencies]
basic = { path = "../basic", default-features = false, features = ["cargo"] }

[dependencies]
bitflags = "1.3.2"
libc = { version = "0.2.*", default-features = false }
