[package]
name = "cgroup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../basic" }
log = "0.4"
nix = "0.24"
bitflags = "1.3.2"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
walkdir = "2"
snafu = "0.7"

[features]
default = ["linux"]
hongmeng = []
linux = []
