[package]
name = "cmdproto"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"                                                                # 我们使用 HTTP status code 所以引入这个类型库
nix = { features = ["socket"], default-features = false, version = "0.24" }
prost = "0.9"                                                               # 处理 protobuf 的代码
snafu = { features = ["std"], default-features = false, version = "0.7" }

# [build-dependencies]
# prost-build = "0.9" # 编译 protobuf

# [dev-dependencies]
# libtests = { path = "../../libs/libtests" }

[[example]]
name = "signals"
path = "./examples/signal.rs"
